force-app/main/default/objects/Opportunity/fields/SPO_Dimension_comment__c.field-meta.xml
<CustomField>
    <fullName>SPO_Dimension_comment__c</fullName>
    <label>Content comment</label>
    <type>TextArea</type>
</CustomField>