force-app/main/default/objects/Opportunity/fields/SPO_DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>SPO_DisplayOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display order</label>
    <type>Checkbox</type>
</CustomField>