force-app/main/default/objects/Opportunity/fields/SPO_DueAmount__c.field-meta.xml
<CustomField>
    <fullName>SPO_DueAmount__c</fullName>
    <formula>IF (
  NOT(ISBLANK(Amount)) &amp;&amp; Amount != 0,
  Amount -  SPO_DepositAmount__c,
  SPO_TotalAmount__c -  SPO_DepositAmount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>