force-app/main/default/objects/Opportunity/fields/SPO_DueAmountCurrencyInclude__c.field-meta.xml
<CustomField>
    <fullName>SPO_DueAmountCurrencyInclude__c</fullName>
    <formula>TEXT ( SPO_DueAmount__c ) + &quot; &quot; + SPO_Store__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due amount</label>
    <type>Text</type>
</CustomField>