force-app/main/default/objects/Opportunity/fields/SPO_Estimated_date__c.field-meta.xml
<CustomField>
    <fullName>SPO_Estimated_date__c</fullName>
    <formula>CASE(SPO_OrderType__c,
     &quot;MTO on Catalog (Hardsided)&quot;, SPO_EstimatedDistributionTime__c ,
     SPO_EstimatedDistributionTime__c + SPO_EstimatedProductionTimeMonths__c)</formula>
    <label>Estimated time (weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>