force-app/main/default/objects/Opportunity/fields/SPO_Estimated_date_NOMTO__c.field-meta.xml
<CustomField>
    <fullName>SPO_Estimated_date_NOMTO__c</fullName>
    <formula>SPO_EstimatedDistributionTime__c + SPO_EstimatedProductionTimeMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated time (weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>