force-app/main/default/objects/Opportunity/fields/SPO_EstimatedDistributionTime__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedDistributionTime__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Estimated distribution time (weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>