force-app/main/default/objects/Opportunity/fields/SPO_EstimatedLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedLeadTime__c</fullName>
    <formula>IF(
    AND(
        DATEVALUE(CreatedDate) &gt;= DATE(2024, 2, 1),
        ISPICKVAL(SPO_Exo__c, &quot;No&quot;)
    ),
    IF(
        366 &gt; SPO_EstimatedProductionTimeMonths__c * 7 + SPO_EstimatedLeadTimeTable__c,
        SPO_EstimatedProductionTimeMonths__c * 7 + SPO_EstimatedLeadTimeTable__c,
        366
    ),
    SPO_EstimatedProductionTimeMonths__c * 7 + SPO_EstimatedLeadTimeTable__c
)


/*SPO_EstimatedProductionTimeMonths__c * 7 + SPO_EstimatedLeadTimeTable__c*/

/*CASE
(
	SPO_ProductCategory__c,
	&quot;Leather Goods&quot;, SPO_EstimatedLeadTime_LG__c,
	&quot;Watches&quot;, 12,
	&quot;Accessories&quot;, SPO_EstimatedLeadTime_ACC__c,
	0
)*/</formula>
    <label>Global Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>