force-app/main/default/objects/Opportunity/fields/SPO_EstimatedLeadTime_ACC__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedLeadTime_ACC__c</fullName>
    <formula>IF(ISBLANK(SPO_BaseSKURefmodelSKU__r.Cites__c), 24, 32)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPO_EstimatedLeadTime_ACC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>