force-app/main/default/objects/Opportunity/fields/SPO_EstimatedLeadTime_LG__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedLeadTime_LG__c</fullName>
    <formula>IF(SPO_NoPersonNeeded__c, IF(ISBLANK(SPO_BaseSKURefmodelSKU__r.Cites__c), 32, 44), IF(ISPICKVAL(SPO_Exo__c, &quot;Yes&quot;), 44, 32))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPO_EstimatedLeadTime_LG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>