force-app/main/default/objects/Opportunity/fields/SPO_EstimatedLeadTimeTable__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedLeadTimeTable__c</fullName>
    <description>In this field we will insert the value of exo/non exo from MIY_LeadTime__c table (inserted in code)</description>
    <label>SPO Estimated Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>