force-app/main/default/objects/Opportunity/fields/SPO_EstimatedProductionTimeMonths__c.field-meta.xml
<CustomField>
    <fullName>SPO_EstimatedProductionTimeMonths__c</fullName>
    <label>Estimated production time (weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>