force-app/main/default/objects/Opportunity/fields/SPO_ExportPrice__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExportPrice__c</fullName>
    <label>Export Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>