force-app/main/default/objects/Opportunity/fields/SPO_ExportPriceCurrencyInclude__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExportPriceCurrencyInclude__c</fullName>
    <formula>TEXT (SPO_ExportPrice__c ) + &quot; &quot; +  TEXT (SPO_CurrencyExportPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export price (currency include)</label>
    <type>Text</type>
</CustomField>