force-app/main/default/objects/Opportunity/fields/SPO_ExteriorMaterial2__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExteriorMaterial2__c</fullName>
    <label>Exterior Material 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_CreationType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agneau</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo)</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo)</fullName>
            </value>
            <value>
                <fullName>Autruche (Exo)</fullName>
            </value>
            <value>
                <fullName>Chevre</fullName>
            </value>
            <value>
                <fullName>Chevre Frisson</fullName>
            </value>
            <value>
                <fullName>Damier</fullName>
            </value>
            <value>
                <fullName>Damier Infini</fullName>
            </value>
            <value>
                <fullName>Epi H</fullName>
            </value>
            <value>
                <fullName>Epi S</fullName>
            </value>
            <value>
                <fullName>Microfibre</fullName>
            </value>
            <value>
                <fullName>Monogram</fullName>
            </value>
            <value>
                <fullName>Monogram Empreinte</fullName>
            </value>
            <value>
                <fullName>Monogram  Vernis</fullName>
            </value>
            <value>
                <fullName>Niloticus Brillant (Exo)</fullName>
            </value>
            <value>
                <fullName>Niloticus Mat (Exo)</fullName>
            </value>
            <value>
                <fullName>Ombre</fullName>
            </value>
            <value>
                <fullName>Porosus Brillant (Exo)</fullName>
            </value>
            <value>
                <fullName>Porosus Mat (Exo)</fullName>
            </value>
            <value>
                <fullName>Taiga</fullName>
            </value>
            <value>
                <fullName>Taurillon</fullName>
            </value>
            <value>
                <fullName>Utah</fullName>
            </value>
            <value>
                <fullName>Vachette Nomade</fullName>
            </value>
            <value>
                <fullName>Veau Bougie</fullName>
            </value>
            <value>
                <fullName>Veau Box</fullName>
            </value>
            <value>
                <fullName>Veau Cachemire (Sofia Coppola)</fullName>
            </value>
            <value>
                <fullName>Veau  Ecorce</fullName>
            </value>
            <value>
                <fullName>Veau Soie</fullName>
            </value>
            <value>
                <fullName>VVN</fullName>
            </value>
            <value>
                <fullName>VVT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>