force-app/main/default/objects/Opportunity/fields/SPO_ExteriorMaterial3localcomment__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExteriorMaterial3localcomment__c</fullName>
    <label>Exterior Material 3 local comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>