force-app/main/default/objects/Opportunity/fields/SPO_ExteriorMaterialColor1__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExteriorMaterialColor1__c</fullName>
    <label>Exterior material color 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_ExteriorMaterial1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alligator Brillant (Exo) Bleu Canard</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Bleu Marine</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Bleu Ocean</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Capucine</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Grenade</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Iris Noir</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Kiwi</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Mandarine</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Moka</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Noir</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Ocre</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Rouge</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Tabac</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Taupe</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Vert Foret</fullName>
            </value>
            <value>
                <fullName>Alligator Brillant (Exo) Violet</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Bleu Canard</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Bleu Marine</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Bleu Ocean</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Capucine</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Grenade</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Iris Noir</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Kiwi</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Mandarine</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Moka</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Noir</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Ocre</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Rouge</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Tabac</fullName>
            </value>
            <value>
                <fullName>Alligator Mat (Exo) Taupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>