force-app/main/default/objects/Opportunity/fields/SPO_ExtMatColor1zoneapprover__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExtMatColor1zoneapprover__c</fullName>
    <label>Ext. mat. color 1 zone approver comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>