force-app/main/default/objects/Opportunity/fields/SPO_ExtMatColor2zoneapproverCommen__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExtMatColor2zoneapproverCommen__c</fullName>
    <label>Ext. Mat. Color 2 zone approver comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>