force-app/main/default/objects/Opportunity/fields/SPO_ExtMaterial3zoneapprovercomment__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExtMaterial3zoneapprovercomment__c</fullName>
    <label>Ext. Material 3 zone approver comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>