force-app/main/default/objects/Opportunity/fields/SPO_ExtMaterialColor3approvercomment__c.field-meta.xml
<CustomField>
    <fullName>SPO_ExtMaterialColor3approvercomment__c</fullName>
    <label>Ext. Material Color 3 approver comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>