force-app/main/default/objects/Opportunity/fields/SPO_FamilyLG__c.field-meta.xml
<CustomField>
    <fullName>SPO_FamilyLG__c</fullName>
    <label>Family LG</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_GroupLG__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>BAGS OPTIONS</fullName>
            </value>
            <value>
                <fullName>BUSINESS ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>BUSINESS ACCESSORIES REFILLS</fullName>
            </value>
            <value>
                <fullName>BUSINESS BAGS</fullName>
            </value>
            <value>
                <fullName>CLUTCHES</fullName>
            </value>
            <value>
                <fullName>DAILY BAGS</fullName>
            </value>
            <value>
                <fullName>DIARY COVERS</fullName>
            </value>
            <value>
                <fullName>DIARY REFILLS</fullName>
            </value>
            <value>
                <fullName>EVENING BAGS</fullName>
            </value>
            <value>
                <fullName>HARDSIDED BOXES</fullName>
            </value>
            <value>
                <fullName>HARDSIDED SUITCASE</fullName>
            </value>
            <value>
                <fullName>HARDSIDED TRUNKS</fullName>
            </value>
            <value>
                <fullName>HARDSIDE LUGGAGE</fullName>
            </value>
            <value>
                <fullName>LEASURE</fullName>
            </value>
            <value>
                <fullName>LG WRITING ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>OPTIONAL ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>OTHER REFILLS</fullName>
            </value>
            <value>
                <fullName>ROLLING LUGGAGE</fullName>
            </value>
            <value>
                <fullName>SMALL LEATHER GOODS</fullName>
            </value>
            <value>
                <fullName>SOFT LUGGAGE</fullName>
            </value>
            <value>
                <fullName>TRAVEL ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>TRAVEL OPTIONS</fullName>
            </value>
            <value>
                <fullName>TRUNKS</fullName>
            </value>
            <value>
                <fullName>WATCHES</fullName>
            </value>
            <value>
                <fullName>WRITING LG</fullName>
            </value>
            <value>
                <fullName>WRITING TRUNKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>