force-app/main/default/objects/Opportunity/fields/SPO_FamilyWatchAcc__c.field-meta.xml
<CustomField>
    <fullName>SPO_FamilyWatchAcc__c</fullName>
    <label>Family Watch/Acc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_SubFamilyWatchAcc__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUCKLES</fullName>
            </value>
            <value>
                <fullName>NOT REVERSIBLE BELT</fullName>
            </value>
            <value>
                <fullName>REVERSIBLE BELT</fullName>
            </value>
            <value>
                <fullName>To add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>