force-app/main/default/objects/Opportunity/fields/SPO_Free__c.field-meta.xml
<CustomField>
    <fullName>SPO_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client gift</label>
    <type>Checkbox</type>
</CustomField>