force-app/main/default/objects/Opportunity/fields/SPO_Gender__c.field-meta.xml
<CustomField>
    <fullName>SPO_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>